Fixed navbar display on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -316,6 +316,7 @@ input.button {
     }
 
     nav.navbar #newEntryButton {
+        display: inline-flex;
         margin-left: 1rem;
     }
 
